--- a/test.html
+++ b/test.html
@@ -16,35 +16,59 @@
 </head>
 <body>
 <div class="container">
-  <div class="img-box">
-    <p>飞利浦(philips) BDP9700/93 3D蓝光高清网络DVD播放器</p>
-    <img src="http://img2013.zuyushop.com/ProPic/20136/Thumb/Thumb_2013060013531667572.jpg"
-         alt="飞利浦(philips)    BDP9700/93 3D蓝光高清网络DVD播放器" width="170">
 
 
 
-    <table width="100%">
-      <tbody>
-      <tr>
-        <td rowspan="2" class="p_pic" valign="top"><a
-            href="redirect.aspx?webid=1&amp;bjid=59664270&amp;tourl=http://item.jd.com/974417.html&amp;y=bijia"
-            target="_blank" onclick="trackLog('商品购买','比价页面');"> <img
-            src="http://sf.manmanbuy.com/images/sitelogo/1.png"></a></td>
-        <td><a href="redirect.aspx?webid=1&amp;bjid=59664270&amp;tourl=http://item.jd.com/974417.html&amp;y=bijia"
-               target="_blank" onclick="trackLog('商品购买','比价页面');">京东商城</a></td>
-        <td class="red"> ￥3999.00</td>
-        <td align="center" width="60"><span
-            style="display: inline-block;width: 56px;height: 24px;border-radius: 6px;text-align: center;line-height: 24px;background-color: #ff5500;color: #fff;font-size: 14px;">去购买</span>
-        </td>
-      </tr>
-      <tr class="tab2">
-        <td></td>
-        <td class="r"></td>
-        <td></td>
-      </tr>
-      </tbody>
-    </table>
+
+
+
+
+
+
+  "<div class="cu-content-pl ui-border-t">
+  <div class="tit">发表评论</div>
+  <div class="reply">
+    <div class="form">
+      <textarea name="ctl00$ContentBody$txt_nr" id="ctl00_ContentBody_txt_nr" rows="3"></textarea>
+      <input name="ctl00$ContentBody$lbl_fbr" id="ctl00_ContentBody_lbl_fbr" value="手机端网友14***154" type="hidden">
+      <input name="ctl00$ContentBody$hid_name" id="ctl00_ContentBody_hid_name" value="移动端：法国进口 波尔多十字布伊堡干白葡萄酒 750ml" type="hidden">
+      <div class="ctrl">
+        <input name="ctl00$ContentBody$Button1" value="发表评论" id="ctl00_ContentBody_Button1" class="tjdp" type="submit">
+      </div>
+    </div>
   </div>
+  <div class="tit" id="newcomment">最新评论</div>
+  <div class="list">
+    <ul>
+      <li class="ui-border-b"><div class="userimg"><img src="http://home.manmanbuy.com/upface/face/1466230634_162.jpg"></div><div class="con"><div class="name clearfix"><div class="username">赶鸭子上架</div> <div class="time">2016/10/25 14:17:33</div></div><div class="content">口感有些涩，入门级可以试试</div></div></li><li class="ui-border-b"><div class="userimg"><img src="http://bbs.manmanbuy.com/images/face/none.gif"></div><div class="con"><div class="name clearfix"><div class="username">qq_400156DP</div> <div class="time">2016/10/25 14:13:36</div></div><div class="content">这酒不错！虽然过了适饮期，但还是觉得比干露珍藏长相思和洛神霞多丽好喝</div></div></li><li class="ui-border-b"><div class="userimg"><img src="http://home.manmanbuy.com/upface/face/1474348687_162.jpg"></div><div class="con"><div class="name clearfix"><div class="username">Yan1994</div> <div class="time">2016/10/25 14:01:33</div></div><div class="content">名字听上去好听</div></div></li>
+    </ul>
+  </div>
+</div>"
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </div>
+
+
+
+
 </body>
 </html>
