--- a/moneyctrl.html
+++ b/moneyctrl.html
@@ -5,64 +5,46 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>慢慢买</title>
-  <link rel="stylesheet" href="css/index.css">
+  <title>慢慢买--省钱控</title>
+  <link rel="stylesheet" href="css/moneyctrl.css">
 </head>
 <body>
 <div class="container">
   <!------------头部   S--------------->
   <div class="m-top">
     <div class="m-logo fl">
-      <a href="index.html"><img src="images/header_logo.png" alt=""></a>
+      <a href="javascript:history.go(-1);"><i class="fa fa-angle-left"></i></a>
     </div>
+    <p>省钱控-最新优惠</p>
     <div class="m-app fr">
       <img src="images/header_app.png" alt="">
     </div>
   </div>
   <!------------头部   E--------------->
 
-  <!------------搜索   S--------------->
-  <div class="m-search">
-    <input type="text" placeholder="请输入你想比价的商品">
-    <button>搜索</button>
-  </div>
-  <!------------搜索   E--------------->
+<div class="moneyctrl">
+  <ul class="list">
+    <!--打折列表渲染 ptl-->
+  </ul>
 
-  <!------------导航菜单   S--------------->
-  <div class="m-nav">
-    <ul>
-<!--tpl-->
 
-    </ul>
-  </div>
-  <!------------导航菜单   E--------------->
 
-<!------------打折促销部分   S--------------->
-<div class="m-sale">
-  <div class="m-sale-top">
-    <span>超值折扣推荐</span>
-    <img src="images/more.png" alt="">
-  </div>
-  <div class="m-sale-main">
-    <ul>
-      <!--模板tpl1-->
-    </ul>
-  </div>
-  <div class="m-sale-footer">
-<button>更多优惠信息>></button>
-  </div>
-</div>
-<!------------打折促销部分   E--------------->
 
-  <!------------品牌排行   S--------------->
-  <div class="m-list m-sale">
-    <div class="m-sale-top">
-      <span>品牌排行</span>
-      <img src="images/more.png" alt="">
+
+
+  <div class="pageTo bottom clearfix">
+    <button class="btn-prev fl">上一页</button>
+    <div class="btn-center">
+      <!--模板tplPageTO-->
     </div>
+    <button class="btn-next fr">下一页</button>
   </div>
-  <!------------品牌排行   E--------------->
-  
+
+
+</div>
+
+
+
   <!------------底部   S--------------->
   <div class="m-footer">
     <ul class="clearfix">
@@ -78,23 +60,13 @@
 
 </div>
 
-<!--导航菜单渲染-->
-<script type="text/html" id="tpl">
-  {{each result  v i}}
-  <li class="w25">
-    <a href="{{v.titlehref}}" class="{{i===7 ? 'nav-more' : ''}}">
-      {{@v.img}}
-      <p>{{v.name}}</p>
-    </a>
-  </li>
-  {{/each}}
-</script>
+
 
 <!--打折列表渲染-->
-<script type="text/html" id="tpl1">
+<script type="text/html" id="tpl">
   {{each result v i}}
   <li>
-    <a href="#">
+    <a href="moneyproduct.html?productid={{v.productId}}">
       {{@v.productImgSm}}
       <div class="info">
         <p class="title">
@@ -109,10 +81,22 @@
 </script>
 
 
+<!--页数加载模板-->
+
+<script type="text/html" id="tplPageTo">
+  <span class="currentPage" data-end="{{count}}"  data-index="{{index}}">{{index}}/{{count}}<i class="fa fa-caret-down fr"></i></span>
+  <ul>
+    <% for(var i=1;i<=count;i++){ %>
+    <li data-pageid="{{i}}" class="{{index === i ?'now' : ''}}">{{i}}/{{count}}</li>
+    <%}%>
+  </ul>
+</script>
+
+
 <script src="lib/jquery/jquery.min.js"></script>
 <script src="lib/artTemplate/template-web.js"></script>
 <!--rem响应-->
 <script src="js/common.js"></script>
-<script src="js/index.js"></script>
+<script src="js/moneyctrl.js"></script>
 </body>
 </html>
