除延迟加载以外的功能实现

--- a/baicaijia.html
+++ b/baicaijia.html
@@ -52,6 +52,14 @@
 
   <!------------底部   E--------------->
 
+
+  <!--返回顶部小圆圈-->
+  <div class="scrolltop goTop">
+    <span class="fa fa-arrow-up"></span>
+  </div>
+
+
+
 </div>
 
 <!--一级菜单-->
