--- a/brand.html
+++ b/brand.html
@@ -77,7 +77,7 @@
 <script type="text/html" id="tpl">
   {{each result v i}}
   <li class="fa fa-angle-right">
-    <span>{{i+1}}</span>
+    <span class="num-top">{{i+1}}</span>
     <div class="wb-right">
       <p>{{v.brandName}}</p>
       <p class="num">{{v.brandInfo}}了</p>
