--- a/coupon.html
+++ b/coupon.html
@@ -15,7 +15,7 @@
     <div class="m-logo fl">
       <a href="javascript:history.go(-1);"><i class="fa fa-angle-left"></i></a>
     </div>
-    <p>白菜价-内部淘宝券</p>
+    <p>内部淘宝券</p>
     <div class="m-app fr">
       <img src="images/header_app.png" alt="">
     </div>
