--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </ul>
   </div>
   <div class="m-sale-footer">
-<button>更多优惠信息>></button>
+<a href="moneyctrl.html">更多优惠信息>></a>
   </div>
 </div>
 <!------------打折促销部分   E--------------->
@@ -94,7 +94,7 @@
 <script type="text/html" id="tpl1">
   {{each result v i}}
   <li>
-    <a href="#">
+    <a href="moneyproduct.html?productid={{v.productId}}">
       {{@v.productImgSm}}
       <div class="info">
         <p class="title">
